Clean up scrapers - remove blocked sites, keep only working ones

--- a/templates/index.html
+++ b/templates/index.html
@@ -341,8 +341,8 @@
             <!-- 숨겨진 입력 필드들로 선택된 사이트 정보 전달 -->
             <input type="hidden" name="wanted" id="wantedInput" value="true">
             <input type="hidden" name="saramin" id="saraminInput" value="true">
-            <input type="hidden" name="jobplanet" id="jobplanetInput" value="true">
-            <input type="hidden" name="worknet" id="worknetInput" value="true">
+            <input type="hidden" name="remoteok" id="remoteokInput" value="true">
+            <input type="hidden" name="weworkremotely" id="weworkremotelyInput" value="true">
             
             <!-- 숨겨진 입력 필드들로 선택된 지역 정보 전달 -->
             <input type="hidden" name="locations" id="locationsInput" value="">
@@ -352,8 +352,8 @@
                 <div class="source-list">
                     <span class="source-item selected" data-site="wanted" id="wantedSite">원티드</span>
                     <span class="source-item selected" data-site="saramin" id="saraminSite">사람인</span>
-                    <span class="source-item selected" data-site="jobplanet" id="jobplanetSite">잡플래닛</span>
-                    <span class="source-item selected" data-site="worknet" id="worknetSite">워크넷</span>
+                    <span class="source-item selected" data-site="remoteok" id="remoteokSite">RemoteOK</span>
+                    <span class="source-item selected" data-site="weworkremotely" id="weworkremotelySite">WeWorkRemotely</span>
                 </div>
                 <div class="selection-info">
                     <small>💡 클릭하여 검색할 사이트를 선택하세요. 최소 1개 사이트는 선택해야 합니다.</small>
