--- a/The_Web_Scrapper/templates/report.html
+++ b/The_Web_Scrapper/templates/report.html
@@ -215,7 +215,7 @@
         .stat-number {
             font-size: 2em;
             font-weight: bold;
-            color: #4CAF50;
+            color: #a1f5a5;
         }
         
         .stat-label {
